# Fast-Lidar-Localization

./: README.md  clear_chache.py  main.py  pyproject.toml  resample_speed.py  test_particle_update_speed.py
docs/: Design Doc.md  Design doc v2.md
examples/: basic_usage.py  benchmark.py
lidarpf/: __init__.py  numba_kernel.py  particle_filter.py  particle_update.py  resample.py  types.py  validation.py
lidarpf/core/: types.py
lidarpf/filter/: __init__.py  motion_model.py  particle_filter.py  resample.py  sensor_model.py
lidarpf/utils/: __init__.py  lookup_table.py
src/cuda_mcl/: __init__.py
src/cuda_mcl/occupancy_grid/: occupancy_grid.py
src/cuda_mcl/particle_filter/: particle_filter.py  particle_filter_config.py
src/filter/: resample.py
src/utils/: constants.py  lookup_table.py
tests/: test_lookup_table.py  test_motion_model.py  test_particle_filter.py  test_resample.py  test_sensor_model.py
