[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lidarpf"
version = "0.1.0"
description = "High-performance LiDAR particle filter localization for robotics (Numba-optimized)"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21",
    "numba>=0.55",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/lidarpf"
Repository = "https://github.com/yourusername/lidarpf"
Documentation = "https://github.com/yourusername/lidarpf#readme"
Issues = "https://github.com/yourusername/lidarpf/issues"

[project.scripts]
lidarpf = "main:main"

[tool.ruff]
line-length = 120
