[project]
name = "lidarpf"
version = "0.1.0"
description = "2D LiDAR particle filter for localization on static maps"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datashader>=0.18.1",
    "numba>=0.61.2",
    "numpy>=2.2.6",
]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
    "ty>=0.0.1a10",
]

[tool.ruff]
line-length = 120
