[project]
name = "cuda-mcl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cupy-cuda12x>=13.5.1",
    "numpy>=2.2.6",
]

[project.scripts]
cuda-mcl = "cuda_mcl:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
